Add nicer form styling to "find birds"

--- a/website/static/stylesheets/elements.sass
+++ b/website/static/stylesheets/elements.sass
@@ -1,5 +1,18 @@
+button
+  &:hover
+    cursor: pointer
+
+
 .scroll-box
   overflow: scroll
+
+
+@mixin pretty-form
+  button,
+  input
+    border: none
+    border-radius: 3px
+    padding: 2px 4px
 
 
 @mixin bulleted-list
