Add "more content coming soon" message if user is not authenticated

--- a/waystohelp/templates/way_to_help.html
+++ b/waystohelp/templates/way_to_help.html
@@ -11,5 +11,11 @@
 
 
 {% block content %}
+
+{% if user.is_authenticated %}
 {{ way.text|enhanced_markdown }}
+{% else %}
+More content coming soon!
+{% endif %}
+
 {% endblock %}
