Style way-to-help page like webpage

--- a/waystohelp/static/stylesheets/waystohelp.sass
+++ b/waystohelp/static/stylesheets/waystohelp.sass
@@ -43,3 +43,11 @@
           font-family: 'adelaidaregular'
           font-size: $base-font-size * 7
           color: rgba($chickadee-light-gray, 0.65)
+
+#way-to-help
+  #text
+    width: 100%
+    max-width: 750px
+    margin-left: auto
+    margin-right: auto
+    @include markdown-image-wrapper(500px)
