--- a/waystohelp/templates/way_to_help.html
+++ b/waystohelp/templates/way_to_help.html
@@ -13,7 +13,10 @@
 {% block content %}
 
 {% if user.is_authenticated %}
-{{ way.text|enhanced_markdown }}
+<div id="text" class="markdown">
+  {{ way.text|enhanced_markdown }}
+</div>
+
 {% else %}
 More content coming soon!
 {% endif %}
