--- a/creations/static/stylesheets/webpage.sass
+++ b/creations/static/stylesheets/webpage.sass
@@ -10,22 +10,4 @@
     margin-bottom: $whitespace
 
   #webpage-text
-    .image-wrapper
-      display: table
-      margin-left: auto
-      margin-right: auto
-
-      img
-        max-width: 500px
-        height: auto
-
-      .image-caption
-        display: table-caption
-        caption-side: bottom
-
-      &.banner
-        width: 100%
-
-        img
-          width: 100%
-          max-width: 100%
+    @include markdown-image-wrapper(500px)
