Have tags use chickadee-cream instead of chickadee-white

--- a/website/static/stylesheets/elements.sass
+++ b/website/static/stylesheets/elements.sass
@@ -55,7 +55,7 @@ $tag-spacing: 3px
 
   a
     background: $moss
-    color: $chickadee-white
+    color: $chickadee-cream
 
     &:hover
       background: $moss-light
