--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -128,7 +128,7 @@ button:hover {
     border-radius: 3px; }
   .tag a {
     background: #788c6d;
-    color: #deedf2; }
+    color: #f5f4ee; }
     .tag a:hover {
       background: #92a389; }
   .tag span {
