Decrease font size of bird search

--- a/birds/static/stylesheets/birds.sass
+++ b/birds/static/stylesheets/birds.sass
@@ -12,7 +12,7 @@
 
       button,
       input
-        font-size: $base-font-size
+        font-size: $base-font-size - 3
         @include sans-font
         letter-spacing: 1px
 
