Add photo checklist

--- a/birds/templates/birds.html
+++ b/birds/templates/birds.html
@@ -40,6 +40,13 @@
   {% endifnotequal %}
 </div>
 
+<div class="page-section">
+  <h3 class="page-subtitle">
+    <a href="{% url 'photo_checklist_url' %}">
+      Browse Laura's photo checklist</a>
+  </h3>
+</div>
+
 <div id="birds-taxonomical" class="page-section">
   <h3 class="page-subtitle">
     Search taxonomically
