--- a/website/static/stylesheets/elements.sass
+++ b/website/static/stylesheets/elements.sass
@@ -105,6 +105,7 @@ $tag-spacing: 3px
 
 @mixin four-three-two-one-child
   display: block
+  position: relative
   box-sizing: border-box
   float: left
   width: 20%
