--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -44,6 +44,7 @@ $card-border-radius: 2px
 @import home
 @import about
 @import ../../../birds/static/stylesheets/birds
+@import ../../../birds/static/stylesheets/photochecklist
 @import ../../../creations/static/stylesheets/miscellany
 @import ../../../creations/static/stylesheets/radio
 @import ../../../creations/static/stylesheets/research
