Minor style improvements for photo checklist

--- a/birds/static/stylesheets/photochecklist.sass
+++ b/birds/static/stylesheets/photochecklist.sass
@@ -10,7 +10,7 @@
         clear: both
         font-family: 'adelaidaregular', sans-serif
         font-size: 200px
-        color: white
+        color: $chickadee-white
         text-align: center
 
       .photo-checklist-family
@@ -34,7 +34,6 @@
             background: rgba(0,0,0,.5)
             font-size: 12px
             color: $chickadee-white
-            text-align: center
 
             .left
               float: left
