--- a/birds/templates/birds.html
+++ b/birds/templates/birds.html
@@ -42,8 +42,8 @@
 
 <div class="page-section">
   <h3 class="page-subtitle">
-    <a href="{% url 'photo_checklist_url' %}">
-      Browse Laura's photo checklist</a>
+    Browse <a href="{% url 'photo_checklist_url' %}">
+      Laura's photo checklist</a>
   </h3>
 </div>
 
