--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -602,7 +602,7 @@ html, body {
     clear: both;
     font-family: "adelaidaregular", sans-serif;
     font-size: 200px;
-    color: white;
+    color: #deedf2;
     text-align: center; }
   #photo-checklist #content #photo-checklist-full .photo-checklist-family {
     float: left;
@@ -650,8 +650,7 @@ html, body {
         padding: 2%;
         background: rgba(0, 0, 0, 0.5);
         font-size: 12px;
-        color: #deedf2;
-        text-align: center; }
+        color: #deedf2; }
         #photo-checklist #content #photo-checklist-full .photo-checklist-family .photo-and-caption .photo-caption .left {
           float: left; }
         #photo-checklist #content #photo-checklist-full .photo-checklist-family .photo-and-caption .photo-caption .right {
