Adjust photo checklist headers in smaller windows

--- a/birds/static/stylesheets/photochecklist.sass
+++ b/birds/static/stylesheets/photochecklist.sass
@@ -13,6 +13,9 @@
         color: $chickadee-white
         text-align: center
 
+        @media (max-width: 1120px)
+          font-size: 18vw
+
       .photo-checklist-family
         float: left
         clear: both
