Lighten bird search. Hover effect on photo checklist

--- a/birds/static/stylesheets/birds.sass
+++ b/birds/static/stylesheets/birds.sass
@@ -17,7 +17,7 @@
         letter-spacing: 1px
 
       input
-        background: $chickadee-light-gray
+        background: lighten($chickadee-light-gray, 5%)
 
       button
         color: $chickadee-cream
