--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -445,7 +445,7 @@ html, body {
     font-family: "Dosis", sans-serif;
     letter-spacing: 1px; }
   #birds #bird-search form input {
-    background: #cfd3cf; }
+    background: #dcdfdc; }
   #birds #bird-search form button {
     color: #f5f4ee;
     background: #9ba5a9; }
@@ -615,6 +615,7 @@ html, body {
     position: relative;
     left: -5%; }
     #photo-checklist #content #photo-checklist-full .photo-checklist-family .photo-and-caption {
+      box-sizing: border-box;
       display: block;
       position: relative;
       box-sizing: border-box;
@@ -642,14 +643,30 @@ html, body {
       @media (max-width: 700px) {
         #photo-checklist #content #photo-checklist-full .photo-checklist-family .photo-and-caption {
           width: 95%; } }
+      #photo-checklist #content #photo-checklist-full .photo-checklist-family .photo-and-caption:after {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1; }
+      #photo-checklist #content #photo-checklist-full .photo-checklist-family .photo-and-caption:hover:after {
+        cursor: pointer;
+        -webkit-transition: background, 100ms, linear;
+        -moz-transition: background, 100ms, linear;
+        transition: background, 100ms, linear;
+        background: rgba(222, 237, 242, 0.2); }
       #photo-checklist #content #photo-checklist-full .photo-checklist-family .photo-and-caption img {
         width: 100%; }
       #photo-checklist #content #photo-checklist-full .photo-checklist-family .photo-and-caption .photo-caption {
+        box-sizing: border-box;
         display: block;
         position: absolute;
-        bottom: 0;
+        bottom: 6px;
         left: 0;
-        width: 96%;
+        width: 100%;
         padding: 2%;
         background: rgba(0, 0, 0, 0.5);
         font-size: 12px;
