--- a/birds/templates/photo_checklist.html
+++ b/birds/templates/photo_checklist.html
@@ -15,16 +15,14 @@
   <h2>{{ family.grouper }}</h2>
   <div class="photo-checklist-family">
     {% for bird in family.list %}
-      <div class="photo-and-caption">
-        <a href="{{ bird.get_absolute_url }}">
-          <img src="{{ bird.main_photo_url }}" />
+    <a class="photo-and-caption" href="{{ bird.get_absolute_url }}">
+      <img src="{{ bird.main_photo_url }}" />
 
-          <div class="photo-caption">
-            {{ bird.common_name }}
-            (<i>{{ bird.scientific_name}}</i>)
-          </div>
-        </a>
+      <div class="photo-caption">
+        {{ bird.common_name }}
+        (<i>{{ bird.scientific_name}}</i>)
       </div>
+    </a>
     {% endfor %}
   </div>
   {% endfor %}
