Change <head> <title> per page

--- a/birds/templates/bird.html
+++ b/birds/templates/bird.html
@@ -5,6 +5,9 @@
 {% block body_id %}bird{% endblock %}
 
 
+{% block head_title_prefix %}{{ bird.common_name }} | Bird |{% endblock %}
+
+
 {% block page_title %}{{ bird.common_name }}{% endblock %}
 
 
