--- a/birds/templates/birds.html
+++ b/birds/templates/birds.html
@@ -4,6 +4,9 @@
 {% block body_id %}birds{% endblock %}
 
 
+{% block head_title_prefix %}Search Birds |{% endblock %}
+
+
 {% block page_title %}Search for Birds{% endblock %}
 
 
