--- a/birds/templates/photo_checklist.html
+++ b/birds/templates/photo_checklist.html
@@ -4,6 +4,9 @@
 {% block body_id %}photo-checklist{% endblock %}
 
 
+{% block head_title_prefix %}Photo Checklist |{% endblock %}
+
+
 {% block page_title %}Laura's Photo Checklist{% endblock %}
 
 
