--- a/creations/templates/article.html
+++ b/creations/templates/article.html
@@ -5,6 +5,9 @@
 {% block body_id %}article{% endblock %}
 
 
+{% block head_title_prefix %}{{ article.title }} | Article |{% endblock %}
+
+
 {% block page_title %}{{ article.title }}{% endblock %}
 
 
