--- a/creations/templates/miscellany.html
+++ b/creations/templates/miscellany.html
@@ -5,6 +5,9 @@
 {% block body_id %}miscellany{% endblock %}
 
 
+{% block head_title_prefix %}Miscellany |{% endblock %}
+
+
 {% block page_title %}Miscellaneous Projects{% endblock %}
 
 
