--- a/creations/templates/radio.html
+++ b/creations/templates/radio.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
-
 {% load extra_tags %}
 {% load staticfiles %}
 
 
 {% block body_id %}radio{% endblock %}
+
+
+{% block head_title_prefix %}Radio |{% endblock %}
 
 
 {% block page_title %}
