--- a/creations/templates/radio_program.html
+++ b/creations/templates/radio_program.html
@@ -7,6 +7,9 @@
 {% block body_id %}radio-program{% endblock %}
 
 
+{% block head_title_prefix %}{{ program.title }} | Radio |{% endblock %}
+
+
 {% block page_title %}
 <i>For the Birds</i> Radio Program: {{ program.title }}
 {% endblock %}
