--- a/creations/templates/research.html
+++ b/creations/templates/research.html
@@ -5,6 +5,9 @@
 {% block body_id %}research{% endblock %}
 
 
+{% block head_title_prefix %}Research |{% endblock %}
+
+
 {% block page_title %}Laura's Research{% endblock %}
 
 
