--- a/creations/templates/speaking.html
+++ b/creations/templates/speaking.html
@@ -5,6 +5,9 @@
 {% block body_id %}speaking{% endblock %}
 
 
+{% block head_title_prefix %}Speaking |{% endblock %}
+
+
 {% block page_title %}
 Laura's Speaking Engagements
 {% endblock %}
