--- a/creations/templates/speaking_program.html
+++ b/creations/templates/speaking_program.html
@@ -5,6 +5,9 @@
 {% block body_id %}speaking-program{% endblock %}
 
 
+{% block head_title_prefix %}{{ program.title }} | Speaking |{% endblock %}
+
+
 {% block page_title %}
 Speaking Program: <i>{{ program.title }}</i>
 {% endblock %}
