--- a/creations/templates/writing.html
+++ b/creations/templates/writing.html
@@ -5,6 +5,9 @@
 {% block body_id %}writing{% endblock %}
 
 
+{% block head_title_prefix %}Writing |{% endblock %}
+
+
 {% block page_title %}Laura's Writing{% endblock %}
 
 
