--- a/waystohelp/templates/way_to_help.html
+++ b/waystohelp/templates/way_to_help.html
@@ -5,6 +5,9 @@
 {% block body_id %}way-to-help{% endblock %}
 
 
+{% block head_title_prefix %}Way to Help {{ way.id }} |{% endblock %}
+
+
 {% block page_title %}
 {{ way.id }}. {{ way.title }}
 {% endblock %}
