--- a/waystohelp/templates/ways_to_help.html
+++ b/waystohelp/templates/ways_to_help.html
@@ -5,6 +5,9 @@
 {% block body_id %}ways-to-help{% endblock %}
 
 
+{% block head_title_prefix %}Ways to Help |{% endblock %}
+
+
 {% block page_title %}101 Ways to Help Birds{% endblock %}
 
 
