--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -6,6 +6,9 @@
 {% block body_id %}about{% endblock %}
 
 
+{% block head_title_prefix %}About Laura |{% endblock %}
+
+
 {% block page_title %}About Laura{% endblock %}
 
 
