--- a/birds/templates/minnesota_birds.html
+++ b/birds/templates/minnesota_birds.html
@@ -4,6 +4,9 @@
 {% block body_id %}minnesota_birds{% endblock %}
 
 
+{% block head_title_prefix %}Minnesota Birds |{% endblock %}
+
+
 {% block page_title %}Birds for Minnesota Field Guide{% endblock %}
 
 
