--- a/creations/templates/book.html
+++ b/creations/templates/book.html
@@ -5,6 +5,9 @@
 {% block body_id %}book{% endblock %}
 
 
+{% block head_title_prefix %}{{ book.title }} | Book |{% endblock %}
+
+
 {% block page_title %}<i>{{ book.title }}</i>{% endblock %}
 
 
