Add <head> <link> tag re: RSS feed

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -3,6 +3,8 @@
   <head>
     {% include 'head_common.html' %}
 
+    {% block head_extras %}{% endblock %}
+
     <title>
       {% block head_title_prefix %}{% endblock %}
       Laura Erickson's For the Birds
