--- a/creations/templates/radio.html
+++ b/creations/templates/radio.html
@@ -9,6 +9,13 @@
 {% block head_title_prefix %}Radio |{% endblock %}
 
 
+{% block head_extras %}
+<link href="http://www.lauraerickson.com/radio/feed.xml"
+  rel="alternate" type="application/rss+xml"
+  title="Laura Erickson's For the Birds RSS feed" />
+{% endblock %}
+
+
 {% block page_title %}
 <i>For the Birds</i> Radio Program
 {% endblock %}
