--- a/creations/templates/radio_calendar.html
+++ b/creations/templates/radio_calendar.html
@@ -9,6 +9,13 @@
 {% endblock %}
 
 
+{% block head_extras %}
+<link href="http://www.lauraerickson.com/radio/feed.xml"
+  rel="alternate" type="application/rss+xml"
+  title="Laura Erickson's For the Birds RSS feed" />
+{% endblock %}
+
+
 {% block page_title %}
 <a href="{{ previous_month_url }}">&larr;</a>
 <i>For the Birds</i> Radio Program Calendar
