--- a/creations/templates/radio_program.html
+++ b/creations/templates/radio_program.html
@@ -10,6 +10,13 @@
 {% block head_title_prefix %}{{ program.title }} | Radio |{% endblock %}
 
 
+{% block head_extras %}
+<link href="http://www.lauraerickson.com/radio/feed.xml"
+  rel="alternate" type="application/rss+xml"
+  title="Laura Erickson's For the Birds RSS feed" />
+{% endblock %}
+
+
 {% block page_title %}
 <i>For the Birds</i> Radio Program: {{ program.title }}
 {% endblock %}
