Taxonomy font gets smaller on small screen

--- a/birds/static/stylesheets/birds.sass
+++ b/birds/static/stylesheets/birds.sass
@@ -35,6 +35,12 @@
     td
       padding: 2px 4px
 
+    @media (max-width: 800px)
+      font-size: $base-font-size - 1
+
+    @media (max-width: 600px)
+      font-size: $base-font-size - 2
+
   #overview
     #main-photo
       display: block
