Change page title to pink on photo checklist

--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -602,6 +602,8 @@ html, body {
 
 #photo-checklist #content {
   background: black; }
+  #photo-checklist #content #page-title {
+    color: #de8d88; }
   #photo-checklist #content #photo-checklist-full h2 {
     width: 100%;
     float: left;
