Add meta tag for mobile

--- a/website/templates/head_common.html
+++ b/website/templates/head_common.html
@@ -1,5 +1,6 @@
 {% load staticfiles %}
 
+<meta name="viewport" content="width=device-width, user-scalable=no" />
 
 <link href="{% static 'images/favicon.ico' %}" rel="icon"
   type="image/x-icon" />
