Some iOS styling

--- a/website/static/stylesheets/home.sass
+++ b/website/static/stylesheets/home.sass
@@ -16,3 +16,13 @@
 
       div
         margin-top: $whitespace
+
+      @media (max-width: 750px)
+        span
+          font-size: 22px
+
+      @media (max-width: 500px)
+        span
+          font-size: 18px
+        div
+          margin-top: $whitespace / 2
