--- a/website/static/stylesheets/page.sass
+++ b/website/static/stylesheets/page.sass
@@ -39,6 +39,9 @@ html, body
   padding: $whitespace * 1.5
   border-radius: 2px
 
+  @media (max-width: 500px)
+    padding: 3%
+
 
 #footer
   margin-top: $whitespace
