--- a/website/static/stylesheets/font.sass
+++ b/website/static/stylesheets/font.sass
@@ -7,11 +7,14 @@
   font-weight: normal
   font-style: normal
 
+
 @import url(http://fonts.googleapis.com/css?family=Dosis:200,500,600)
+
 
 $base-font-size: 17px
 $serif-font-family: Georgia, serif
 $sans-font-family: 'Dosis', sans-serif
+
 
 @mixin sans-font($weight: regular)
   font-family: $sans-font-family
@@ -22,11 +25,16 @@ $sans-font-family: 'Dosis', sans-serif
     font-weight: 500
     letter-spacing: 1px
 
+
 @mixin dark-links
   color: $dark-link-color
 
   &:hover, &.active
     color: $dark-link-color-active
+
+
+$font-breakpoint: 700px
+
 
 body
   font-family: $serif-font-family
@@ -34,31 +42,55 @@ body
   color: $chickadee-black
   line-height: 1.5
 
+  @media (max-width: $font-breakpoint)
+    font-size: $base-font-size - 2
+
+
 h1, h2, h3, h4
   margin: 0
   padding: 0
   font-weight: normal
 
+
 h1
   font-family: 'adelaidaregular', sans-serif
+
 
 h2, h3, h4, .markdown h1
   @include sans-font(bold)
   color: $chickadee-dark-gray
+  line-height: 1.3
+
 
 h2
   font-size: $base-font-size + 13
   margin-top: -10px
 
+  @media (max-width: $font-breakpoint)
+    font-size: $base-font-size + 7
+
+
 h3, .markdown h1
   font-size: $base-font-size + 9
   margin-top: -10px
 
+  @media (max-width: $font-breakpoint)
+    font-size: $base-font-size + 4
+
+
 h4, .markdown h2
   font-size: $base-font-size + 5
 
+  @media (max-width: $font-breakpoint)
+    font-size: $base-font-size + 2
+
+
 .markdown h3, .markdown h4
   font-size: $base-font-size + 2
+
+  @media (max-width: $font-breakpoint)
+    font-size: $base-font-size
+
 
 a
   text-decoration: none
