--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -58,6 +58,9 @@ body {
   font-size: 17px;
   color: #3c3a47;
   line-height: 1.5; }
+  @media (max-width: 700px) {
+    body {
+      font-size: 15px; } }
 
 h1, h2, h3, h4 {
   margin: 0;
@@ -71,21 +74,34 @@ h2, h3, h4, .markdown h1 {
   font-family: "Dosis", sans-serif;
   font-weight: 500;
   letter-spacing: 1px;
-  color: #777e86; }
+  color: #777e86;
+  line-height: 1.3; }
 
 h2 {
   font-size: 30px;
   margin-top: -10px; }
+  @media (max-width: 700px) {
+    h2 {
+      font-size: 24px; } }
 
 h3, .markdown h1 {
   font-size: 26px;
   margin-top: -10px; }
+  @media (max-width: 700px) {
+    h3, .markdown h1 {
+      font-size: 21px; } }
 
 h4, .markdown h2 {
   font-size: 22px; }
+  @media (max-width: 700px) {
+    h4, .markdown h2 {
+      font-size: 19px; } }
 
 .markdown h3, .markdown h4 {
   font-size: 19px; }
+  @media (max-width: 700px) {
+    .markdown h3, .markdown h4 {
+      font-size: 17px; } }
 
 a {
   text-decoration: none;
@@ -202,7 +218,7 @@ html, body {
   border-radius: 2px; }
   @media (max-width: 500px) {
     #content {
-      padding: 3%; } }
+      padding: 18px 5%; } }
 
 #footer {
   margin-top: 36px;
@@ -215,6 +231,9 @@ html, body {
 
 #page-title {
   margin-bottom: 36px; }
+  @media (max-width: 500px) {
+    #page-title {
+      margin-bottom: 18px; } }
   #page-title:empty {
     margin-bottom: 0px; }
 
@@ -337,7 +356,6 @@ html, body {
 
 #footer {
   color: #f5f4ee;
-  font-size: 16px;
   font-family: "Dosis", sans-serif;
   font-weight: 200;
   letter-spacing: 1px; }
@@ -907,6 +925,7 @@ html, body {
   height: 30px; }
 #radio audio,
 #radio-program audio {
+  display: block;
   max-width: 100%; }
 
 #radio-calendar .download-link img {
