More iOS styling

--- a/website/static/stylesheets/font.sass
+++ b/website/static/stylesheets/font.sass
@@ -107,6 +107,9 @@ a
   color: $chickadee-dark-gray
   font-size: $base-font-size - 2
 
+  @media (max-width: $font-breakpoint)
+    font-size: $base-font-size - 4
+
 b, strong
   font-weight: bold
 
