Try to fix iOS audio player being messed up

--- a/creations/static/stylesheets/radio.sass
+++ b/creations/static/stylesheets/radio.sass
@@ -96,6 +96,8 @@
       .program
         float: left
         width: 100%
+        overflow: hidden
+        word-wrap: break-word
 
         &:nth-child(even)
           background: lighten($moss, 40%)
