--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -21,7 +21,7 @@
     </tr>
   </table>
 
-  <input type="submit" value="login" />
+  <input type="submit" value="Log In" />
   <input type="hidden" name="next" value="{{ next }}" />
 </form>
 
