Credit mgeraci for chickadee illustrations

--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -25,5 +25,8 @@
     <a href="http://katherineerickson.com/">Katherine Erickson</a>,
     code on
     <a href="https://github.com/katur/forthebirds">Github</a>.
+    <br>
+    Chickadee illustrations by
+    <a href="http://michaelgeraci.com">Michael P. Geraci</a>.
   </div>
 </div>
